[package]
name = "specto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
clap = { version = "4.4.14", features = ["derive"] }
futures-util = "0.3.30"
notify = "6.1.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.21.0"
tower-http = { version = "0.5.1", features = ["fs"] }
